@@ -4,6 +4,7 @@ Noteworthy changes in release 1.4
   in this release, and the shared library soversion has been bumped to 2.
   - bam_pileup1_t has an additional field (which holds user data)
   - bam1_core_t has been modified to allow for >64K CIGAR operations
+    and (along with bam1_t) so that CIGAR entries are aligned in memory
   - hopen() has vararg arguments for setting URL scheme-dependent options
   - the various tbx_conf_* presets are now const
 
